[package]
name = "pinocchio-fundraiser"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-associated-token-account = "0.2.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
pinocchio-token = "0.4.0"