[package]
name = "escrow-litesvm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_litesvm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = "0.6.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"